syntax = "proto3";

option java_package = "ma.enset.vehiculeinfraction.web.grpc.stubs";

service RegistrationService {
  rpc getOwners(Empty) returns (OwnerList);
  rpc getOwner(OwnerId) returns (Owner);
  rpc saveOwner(OwnerRequest) returns (Owner);
  rpc updateOwner(OwnerUpdateRequest) returns (Owner);
  rpc deleteOwner(OwnerId) returns (Empty);

  rpc getVehicles(Empty) returns (VehicleList);
  rpc getVehicle(VehicleId) returns (Vehicle);
  rpc saveVehicle(VehicleRequest) returns (Vehicle);
  rpc updateVehicle(VehicleUpdateRequest) returns (Vehicle);
  rpc deleteVehicle(VehicleId) returns (Empty);
}

message OwnerUpdateRequest{
  int32 id = 1;
  string name = 2;
  string birthDate = 3;
  string email = 4;
}

message VehicleUpdateRequest{
  string id = 1;
  string licensePlateNumber = 2;
  string brand = 3;
  float fiscalPower = 4;
  string model = 5;
}

message OwnerId{
  int32 id = 1;
}

message VehicleId{
  string id = 1;
}

message OwnerRequest {
  string name = 1;
  string email = 3;
  string birthDate = 2;
}

message VehicleRequest {
  string licensePlateNumber = 1;
  string brand = 2;
  float fiscalPower = 3;
  string model = 4;
}

message Empty{}

message OwnerList {
  repeated Owner owners = 1;
}

message VehicleList{
  repeated Vehicle vehicles = 1;
}

message Owner {
  int32 id = 1;
  string name = 2;
  string birthDate = 3;
  string email = 4;
  repeated Vehicle vehicles = 5;
}

message Vehicle{
  string id = 1;
  string licensePlateNumber = 2;
  string brand = 3;
  float fiscalPower = 4;
  string model = 5;
  Owner owner = 6;
}
